fix: reword and simplify text

--- a/docs/tutorials/extend-admin-area/extending-entities.mdx
+++ b/docs/tutorials/extend-admin-area/extending-entities.mdx
@@ -14,7 +14,7 @@ import popularCarManufacturerSaved from "./entities/popular-car-manufacturer-sav
 
 - how to continue developing on top of the generated application code
 - in the GraphQL API, how to extend the initially created entity with new attributes
-- in the Admin Area, how to extend the initially created form with new fields
+- in the Admin Area, how to extend the initially created form with new form fields
 
 :::
 
@@ -22,7 +22,7 @@ import popularCarManufacturerSaved from "./entities/popular-car-manufacturer-sav
 
 Initially, the [`CarManufacturer`](https://github.com/webiny/webiny-examples/blob/master/extend-admin-area/api/code/graphql/src/plugins/scaffolds/carManufacturers/entities/CarManufacturer.ts) entity that was created in the scaffolding process only contains two attributes: [`title`](https://github.com/webiny/webiny-examples/blob/master/extend-admin-area/api/code/graphql/src/plugins/scaffolds/carManufacturers/entities/CarManufacturer.ts#L18) and [`description`](https://github.com/webiny/webiny-examples/blob/master/extend-admin-area/api/code/graphql/src/plugins/scaffolds/carManufacturers/entities/CarManufacturer.ts#L19). Of course, these are just starter attributes and we are certainly encouraged to extend the entity with additional ones.
 
-For example, let's see how we can add the new `isPopular` boolean attribute to the initial [`CarManufacturer`](https://github.com/webiny/webiny-examples/blob/master/extend-admin-area/api/code/graphql/src/plugins/scaffolds/carManufacturers/entities/CarManufacturer.ts) entity, and then, enable logged-in administrators to modify its value, by adding a simple [`Switch`](https://storybook.webiny.com/?path=/story/components-switch--usage) form element into the generated form.
+Let's see how we can add the new `isPopular` boolean attribute to the [`CarManufacturer`](https://github.com/webiny/webiny-examples/blob/master/extend-admin-area/api/code/graphql/src/plugins/scaffolds/carManufacturers/entities/CarManufacturer.ts) entity, and then, via the new Admin Area application module, enable logged-in administrators to modify its value, by adding a simple [`Switch`](https://storybook.webiny.com/?path=/story/components-switch--usage) form field to the Car Manufacturers form.
 
 ## GraphQL API
 
@@ -106,11 +106,11 @@ export default /* GraphQL */ `
 If you've run the two [`webiny watch`](/docs/how-to-guides/webiny-cli/use-watch-command/) commands, mentioned in the [previous section](/docs/tutorials/extend-admin-area/scaffolding#using-the-watch-command), the performed application code changes should be automatically rebuilt and redeployed into the cloud.
 :::
 
-Once we've done all of the above shown changes, we're ready to move on to the Admin Area React application.
+Once we've done all of the above shown changes, we can switch to our Admin Area application, and continue by updating the form.
 
-## Admin Area React Application
+## Admin Area Application
 
-In the [`CarManufacturersForm`](https://github.com/webiny/webiny-examples/blob/master/extend-admin-area/apps/admin/code/src/plugins/scaffolds/carManufacturers/views/CarManufacturersForm.tsx) form, let's add a new [`Switch`](https://storybook.webiny.com/?path=/story/components-switch--usage) form element, which will enable logged-in users to mark a particular car manufacturer as popular or not popular (parts of code removed for brevity):
+In the [`CarManufacturersForm`](https://github.com/webiny/webiny-examples/blob/master/extend-admin-area/apps/admin/code/src/plugins/scaffolds/carManufacturers/views/CarManufacturersForm.tsx) form, let's add a new [`Switch`](https://storybook.webiny.com/?path=/story/components-switch--usage) form element, which will enable logged-in administrators to mark a particular car manufacturer as popular or not popular (parts of code removed for brevity):
 
 ```tsx title="apps/admin/code/src/plugins/scaffolds/carManufacturers/views/CarManufacturersForm.tsx" {4,18-27}
 (...)
