--- a/docs/tutorials/extend-admin-area/introduction.mdx
+++ b/docs/tutorials/extend-admin-area/introduction.mdx
@@ -26,7 +26,7 @@ Extending the existing Webiny applications may work, but still, by creating a cu
 
 ## The Goal
 
-The goal of this tutorial is to learn how we can easily extend the existing Admin Area React application with custom standalone modules. We will create a new **Car Manufacturers** module, which, as the name itself depicts, will enable users to manage car manufacturer entries.
+The goal of this tutorial is to learn how we can easily extend the existing Admin Area application with custom standalone modules. We will create a new **Car Manufacturers** module, which, as the name itself depicts, will enable users to manage car manufacturer entries.
 
 <CenteredImage shadow={false} alt="New Car Manufacturers Module" src={scaffoldsAdminArea}/>
 
