--- a/docs/tutorials/extend-admin-area/getting-started.mdx
+++ b/docs/tutorials/extend-admin-area/getting-started.mdx
@@ -18,9 +18,9 @@ import scaffoldsFullOutput from "./scaffolding/scaffold-full-output.png";
 
 ## Extend Admin Area Scaffold
 
-The best way to start extending the Admin Area application would be to use the [Extend Admin Area](/docs/how-to-guides/webiny-cli/scaffolding/extend-admin-area) scaffold, which will automatically generate all of the fundamental application pieces for us. On the application code leve, this includes the necessary plugins which will create the following:
+The best way to start extending the Admin Area application would be to use the [Extend Admin Area](/docs/how-to-guides/webiny-cli/scaffolding/extend-admin-area) scaffold, which will automatically generate all of the fundamental application pieces for us. On the application code level, this includes the necessary plugins which will create the following:
 
-- in the Admin Area React application: a new route, menu item, and a [CRUD view](/docs/how-to-guides/webiny-cli/scaffolding/extend-admin-area#new-webiny-admin-area-module)
+- in the Admin Area: a new route, menu item, and a [CRUD view](/docs/how-to-guides/webiny-cli/scaffolding/extend-admin-area#new-webiny-admin-area-module)
 - in the GraphQL API: supporting GraphQL query and mutation operations
 
 :::info
@@ -40,7 +40,7 @@ Running this command should give us the following list of available scaffolds:
 Once we've selected the **Extend Admin Area** scaffold from the list, we'll get presented with the the following three questions:
 
 1. the path to our GraphQL API's plugins folder (`api/code/graphql/src/plugins` by default)
-2. the path to our Admin Area React application's plugins folder (`apps/admin/code/src/plugins` by default)
+2. the path to our Admin Area application's plugins folder (`apps/admin/code/src/plugins` by default)
 3. the name of the initial entity
 
 For the first two, we can just use the default paths by simply pressing the **Enter** key. As the answer to the last question, we'll enter **CarManufacturer**.
@@ -77,7 +77,7 @@ Running the `yarn webiny info` command in your Webiny project folder will give y
 
 ### Admin Area
 
-The following command will start a new watch session on our Admin Area React application code:
+The following command will start a new watch session on our Admin Area application code:
 
 ```
 yarn webiny watch apps/admin --env dev
@@ -85,7 +85,7 @@ yarn webiny watch apps/admin --env dev
 
 #### No Initial Deployment
 
-In contrast to the [GraphQL API](/docs/tutorials/extend-admin-area/getting-started#graphql-api) development, where the application code needs to be redeployed into the cloud as we're making changes to it, Admin Area React application can be developed locally. Meaning, once the watch command is run, no automatic deployments into the cloud will occur.
+In contrast to the [GraphQL API](/docs/tutorials/extend-admin-area/getting-started#graphql-api) development, where the application code needs to be redeployed into the cloud as we're making changes to it, Admin Area application can be developed locally. Meaning, once the watch command is run, no automatic deployments into the cloud will occur.
 
 ## Final Result
 
@@ -95,18 +95,18 @@ The following screenshot shows the two watch commands run side-by-side in two se
 
 <CenteredImage alt="Watching Our Application Code" src={watchSessions}/>
 
-### Admin Area
+### Admin Area Application
 
-Once the two watch sessions have been started, in our Admin Area, we should be able to see the new **Car Manufacturers** module and, via the generated [CRUD view](/docs/how-to-guides/webiny-cli/scaffolding/extend-admin-area/#new-webiny-admin-area-module), perform essential CRUD operations.
+Once the two watch sessions have been started, in our Admin Area application, we should be able to see the new **Car Manufacturers** module and, via the generated [CRUD view](/docs/how-to-guides/webiny-cli/scaffolding/extend-admin-area/#new-webiny-admin-area-module), perform essential CRUD operations.
 
 <CenteredImage shadow={false} alt="New Car Manufacturers Module" src={scaffoldsAdminArea}/>
 
 :::tip
-By default, the Admin Area React application should be locally accessible via [http://localhost:3001](http://localhost:3001).
+By default, the Admin Area application should be locally accessible via [http://localhost:3001](http://localhost:3001).
 :::
 
 ## Further Development
 
-Once we got the initial **Car Manufacturers** Admin Area module working, we can proceed by modifying and extending it to our needs.
+Once we got the initial **Car Manufacturers** Admin Area application module working, we can proceed by modifying and extending it to our needs.
 
-Usually, on the GraphQL API side, we'd want to start by extending the [`CarManufacturer` entity](https://github.com/webiny/webiny-examples/blob/master/extend-admin-area/api/code/graphql/src/plugins/scaffolds/carManufacturers/entities/CarManufacturer.ts) and our [GraphQL schema](https://github.com/webiny/webiny-examples/blob/master/extend-admin-area/api/code/graphql/src/plugins/scaffolds/carManufacturers/typeDefs.ts) with new attributes and fields, respectively. Once we're done, we'd then continue by propagating the same changes to the Admin Area React application, by adding new form fields to the [`CarManufacturersForm`](https://github.com/webiny/webiny-examples/blob/master/extend-admin-area/apps/admin/code/src/plugins/scaffolds/carManufacturers/views/CarManufacturersForm.tsx) React component and updating GraphQL queries and mutations that were initially generated, accordingly.
+Usually, on the GraphQL API side, we'd want to start by extending the [`CarManufacturer` entity](https://github.com/webiny/webiny-examples/blob/master/extend-admin-area/api/code/graphql/src/plugins/scaffolds/carManufacturers/entities/CarManufacturer.ts) and our [GraphQL schema](https://github.com/webiny/webiny-examples/blob/master/extend-admin-area/api/code/graphql/src/plugins/scaffolds/carManufacturers/typeDefs.ts) with new attributes and fields, respectively. Once we're done, we'd then continue by propagating the same changes to the Admin Area application, by adding new form fields to the [`CarManufacturersForm`](https://github.com/webiny/webiny-examples/blob/master/extend-admin-area/apps/admin/code/src/plugins/scaffolds/carManufacturers/views/CarManufacturersForm.tsx) React component and updating GraphQL queries and mutations that were initially generated, accordingly.
