fix: minor rewording

--- a/docs/tutorials/extend-admin-area/getting-started.mdx
+++ b/docs/tutorials/extend-admin-area/getting-started.mdx
@@ -20,7 +20,7 @@ import scaffoldsFullOutput from "./scaffolding/scaffold-full-output.png";
 
 The best way to start extending the Admin Area application would be to use the [Extend Admin Area](/docs/how-to-guides/webiny-cli/scaffolding/extend-admin-area) scaffold, which will automatically generate all of the fundamental application pieces for us. On the application code level, this includes the necessary plugins which will create the following:
 
-- in the Admin Area: a new route, menu item, and a [CRUD view](/docs/how-to-guides/webiny-cli/scaffolding/extend-admin-area#new-webiny-admin-area-module)
+- in the Admin Area application: a new route, menu item, and a [CRUD view](/docs/how-to-guides/webiny-cli/scaffolding/extend-admin-area#new-webiny-admin-area-module)
 - in the GraphQL API: supporting GraphQL query and mutation operations
 
 :::info
@@ -75,7 +75,7 @@ Upon initializing a new watch session, all of the application code changes that 
 Running the `yarn webiny info` command in your Webiny project folder will give you all of the relevant project URLs, including the URL of your GraphQL API.
 :::
 
-### Admin Area
+### Admin Area Application
 
 The following command will start a new watch session on our Admin Area application code:
 
