--- a/docs/tutorials/extend-admin-area/extending-entities.mdx
+++ b/docs/tutorials/extend-admin-area/extending-entities.mdx
@@ -106,7 +106,7 @@ export default /* GraphQL */ `
 If you've run the two [`webiny watch`](/docs/how-to-guides/webiny-cli/use-watch-command/) commands, mentioned in the [previous section](/docs/tutorials/extend-admin-area/scaffolding#using-the-watch-command), the performed application code changes should be automatically rebuilt and redeployed into the cloud.
 :::
 
-Once we've done all of the above shown changes, we can switch to our Admin Area application, and continue by updating the form.
+Once we've done all of the above shown changes, we can switch to our Admin Area application, and continue by updating the Car Manufacturers form.
 
 ## Admin Area Application
 
