--- a/docs/tutorials/extend-admin-area/introduction.mdx
+++ b/docs/tutorials/extend-admin-area/introduction.mdx
@@ -11,18 +11,18 @@ import CenteredImage from "@components/CenteredImage";
 import scaffoldsAdminArea from "./introduction/scaffolds-admin-area.png";
 
 :::tip WHAT YOU’LL LEARN
-- the motivation for extending the Admin Area with new modules
+- the motivation for extending the Admin Area application with new modules
 - the goal of this tutorial
 - what are the prerequisites that need to be fulfilled in order to follow this tutorial
 :::
 
 ## Overview
 
-By default, every Webiny project comes with Webiny Admin Area, a ready-made React application which enables project administrators to manage content coming from one or more Webiny applications, like [Headless CMS](https://www.webiny.com/serverless-app/headless-cms), [Page Builder](https://www.webiny.com/serverless-app/page-builder), [File Manager](https://www.webiny.com/serverless-app/file-manager), and so on. And while these applications do offer a solid number of features and can also be extended to a certain extent, there are still cases where creating custom standalone Admin Area modules makes more sense.
+By default, every Webiny project comes with Webiny Admin Area, a ready-made React application which enables project administrators to manage content coming from one or more Webiny applications, like [Headless CMS](https://www.webiny.com/serverless-app/headless-cms), [Page Builder](https://www.webiny.com/serverless-app/page-builder), [File Manager](https://www.webiny.com/serverless-app/file-manager), and so on. And while these applications do offer a solid number of features and can also be extended to a certain extent, there are still cases where creating custom standalone Admin Area application modules makes more sense.
 
 For example, let's imagine we're working on a custom **Car Manufacturers** module, which lets us perform basic CRUD operations, includes a set of operations that need to follow specific business logic rules, security requirements, may interact with external APIs and services, and so on.
 
-Extending the existing Webiny applications may work, but still, by creating a custom standalone Admin Area module, we can benefit from additional application code control, flexibility and easier maintenance. And, with the help of the existing [Extend Admin Area](/docs/how-to-guides/webiny-cli/scaffolding/extend-admin-area) scaffold, we can start working on our new module in no time, with all of the right development workflows in place.
+Extending the existing Webiny applications may work, but still, by creating a custom standalone Admin Area application module, we can benefit from additional application code control, flexibility and easier maintenance. And, with the help of the existing [Extend Admin Area](/docs/how-to-guides/webiny-cli/scaffolding/extend-admin-area) scaffold, we can start working on our new module in no time, with all of the right development workflows in place.
 
 ## The Goal
 
