fix: update links

--- a/docs/tutorials/extend-admin-area/security/admin-area.mdx
+++ b/docs/tutorials/extend-admin-area/security/admin-area.mdx
@@ -45,7 +45,7 @@ For starters, let's see how we can hide the Car Manufacturers menu items in the 
 
 ## Main Menu Items
 
-By completing the previous [Admin Area Package](/docs/tutorials/extend-admin-area/admin-area-package) tutorial, in our Webiny Admin Area, we should have the following items in the main menu:
+By completing the [previous set of tutorials](/docs/tutorials/extend-admin-area/introduction), in our Webiny Admin Area, we should have the following items in the main menu:
 
 <CenteredImage alt="Main Menu - Car Manufacturers Module" src={carManufacturersMenuItem} />
 
