fix: minor rewording

--- a/docs/tutorials/extend-admin-area/getting-started.mdx
+++ b/docs/tutorials/extend-admin-area/getting-started.mdx
@@ -23,10 +23,6 @@ The best way to start extending the Admin Area application would be to use the [
 - in the Admin Area application: a new route, menu item, and a [CRUD view](/docs/how-to-guides/webiny-cli/scaffolding/extend-admin-area#new-webiny-admin-area-module)
 - in the GraphQL API: supporting GraphQL query and mutation operations
 
-:::info
-The generated GraphQL API application code relies exclusively on [Amazon DynamoDB](https://aws.amazon.com/dynamodb/) for storing and retrieving data. Of course, you're certainly free to [bring your own](/docs/how-to-guides/webiny-cli/scaffolding/extend-graphql-api#storing-and-retrieving-data) databases and import different database clients, if need be.
-:::
-
 So, in our terminal of choice, from our project root, let's run the following command:
 
 ```
@@ -85,7 +81,7 @@ yarn webiny watch apps/admin --env dev
 
 #### No Initial Deployment
 
-In contrast to the [GraphQL API](/docs/tutorials/extend-admin-area/getting-started#graphql-api) development, where the application code needs to be redeployed into the cloud as we're making changes to it, Admin Area application can be developed locally. Meaning, once the watch command is run, no automatic deployments into the cloud will occur.
+In contrast to the [GraphQL API](/docs/tutorials/extend-admin-area/getting-started#graphql-api) development, where the application code needs to be redeployed into the cloud as we're making changes to it, Admin Area application can be developed locally. Meaning, once the watch command is run, no automatic deployments will be occurring.
 
 ## Final Result
 
@@ -110,3 +106,9 @@ By default, the Admin Area application should be locally accessible via [http://
 Once we got the initial **Car Manufacturers** Admin Area application module working, we can proceed by modifying and extending it to our needs.
 
 Usually, on the GraphQL API side, we'd want to start by extending the [`CarManufacturer` entity](https://github.com/webiny/webiny-examples/blob/master/extend-admin-area/api/code/graphql/src/plugins/scaffolds/carManufacturers/entities/CarManufacturer.ts) and our [GraphQL schema](https://github.com/webiny/webiny-examples/blob/master/extend-admin-area/api/code/graphql/src/plugins/scaffolds/carManufacturers/typeDefs.ts) with new attributes and fields, respectively. Once we're done, we'd then continue by propagating the same changes to the Admin Area application, by adding new form fields to the [`CarManufacturersForm`](https://github.com/webiny/webiny-examples/blob/master/extend-admin-area/apps/admin/code/src/plugins/scaffolds/carManufacturers/views/CarManufacturersForm.tsx) React component and updating GraphQL queries and mutations that were initially generated, accordingly.
+
+## FAQ
+
+#### Which database is used in the generated GraphQL API application code?
+
+The generated GraphQL API application code relies exclusively on [Amazon DynamoDB](https://aws.amazon.com/dynamodb/) for storing and retrieving data. Of course, you're certainly free to [bring your own](/docs/how-to-guides/webiny-cli/scaffolding/extend-graphql-api#storing-and-retrieving-data) databases and import different database clients, if need be.
