--- a/docs/tutorials/extend-admin-area/getting-started.mdx
+++ b/docs/tutorials/extend-admin-area/getting-started.mdx
@@ -105,7 +105,9 @@ By default, the Admin Area application should be locally accessible via [http://
 
 Once we got the initial **Car Manufacturers** Admin Area application module working, we can proceed by modifying and extending it to our needs.
 
-Usually, on the GraphQL API side, we'd want to start by extending the [`CarManufacturer` entity](https://github.com/webiny/webiny-examples/blob/master/extend-admin-area/api/code/graphql/src/plugins/scaffolds/carManufacturers/entities/CarManufacturer.ts) and our [GraphQL schema](https://github.com/webiny/webiny-examples/blob/master/extend-admin-area/api/code/graphql/src/plugins/scaffolds/carManufacturers/typeDefs.ts) with new attributes and fields, respectively. Once we're done, we'd then continue by propagating the same changes to the Admin Area application, by adding new form fields to the [`CarManufacturersForm`](https://github.com/webiny/webiny-examples/blob/master/extend-admin-area/apps/admin/code/src/plugins/scaffolds/carManufacturers/views/CarManufacturersForm.tsx) React component and updating GraphQL queries and mutations that were initially generated, accordingly.
+Usually, on the GraphQL API side, we'd want to start by extending the [`CarManufacturer` entity](https://github.com/webiny/webiny-examples/blob/master/extend-admin-area/api/code/graphql/src/plugins/scaffolds/carManufacturers/entities/CarManufacturer.ts) and our [GraphQL schema](https://github.com/webiny/webiny-examples/blob/master/extend-admin-area/api/code/graphql/src/plugins/scaffolds/carManufacturers/typeDefs.ts) with new attributes and fields, respectively. Once we're done, we'd then continue by propagating the same changes to the Admin Area application, by adding new form fields to the [`CarManufacturersForm`](https://github.com/webiny/webiny-examples/blob/master/extend-admin-area/apps/admin/code/src/plugins/scaffolds/carManufacturers/views/CarManufacturersForm.tsx) React component and updating relevant [GraphQL queries and mutations](https://github.com/webiny/webiny-examples/blob/master/extend-admin-area/apps/admin/code/src/plugins/scaffolds/carManufacturers/views/hooks/graphql.ts).
+
+To learn more, continue reading the following [Extending Entities](/docs/tutorials/extend-admin-area/extending-entities) section.
 
 ## FAQ
 
