fix: simplify sentence

--- a/docs/tutorials/extend-admin-area/extending-entities.mdx
+++ b/docs/tutorials/extend-admin-area/extending-entities.mdx
@@ -110,7 +110,7 @@ Once we've done all of the above shown changes, we can switch to our Admin Area 
 
 ## Admin Area Application
 
-In the [`CarManufacturersForm`](https://github.com/webiny/webiny-examples/blob/master/extend-admin-area/apps/admin/code/src/plugins/scaffolds/carManufacturers/views/CarManufacturersForm.tsx) form, let's add a new [`Switch`](https://storybook.webiny.com/?path=/story/components-switch--usage) form element, which will enable logged-in administrators to mark a particular car manufacturer as popular or not popular (parts of code removed for brevity):
+In the [`CarManufacturersForm`](https://github.com/webiny/webiny-examples/blob/master/extend-admin-area/apps/admin/code/src/plugins/scaffolds/carManufacturers/views/CarManufacturersForm.tsx) React component, let's add a new [`Switch`](https://storybook.webiny.com/?path=/story/components-switch--usage) form element, which will enable logged-in administrators to mark a particular car manufacturer as popular or not popular (parts of code removed for brevity):
 
 ```tsx title="apps/admin/code/src/plugins/scaffolds/carManufacturers/views/CarManufacturersForm.tsx" {4,18-27}
 (...)
@@ -158,7 +158,7 @@ Once we've updated the [`CarManufacturersForm`](https://github.com/webiny/webiny
 
 Finally, we need to add the `isPopular` field to all relevant GraphQL query and mutation operations. This ensures that we're both sending and receiving the `isPopulate` value while interacting with the GraphQL API.
 
-Adding the `isPopular` field can be easily done by updating the [`CAR_MANUFACTURER_FIELDS_FRAGMENT`](https://github.com/webiny/webiny-examples/blob/master/extend-admin-area/apps/admin/code/src/plugins/scaffolds/carManufacturers/views/hooks/graphql.ts#L3) fragment, located in the [`graphql.ts`](https://github.com/webiny/webiny-examples/blob/master/extend-admin-area/apps/admin/code/src/plugins/scaffolds/carManufacturers/views/hooks/graphql.ts#L3) file:
+Adding the `isPopular` field can be easily done by updating the [`CAR_MANUFACTURER_FIELDS_FRAGMENT`](https://github.com/webiny/webiny-examples/blob/master/extend-admin-area/apps/admin/code/src/plugins/scaffolds/carManufacturers/views/hooks/graphql.ts#L3) GraphQL fragment, located in the [`graphql.ts`](https://github.com/webiny/webiny-examples/blob/master/extend-admin-area/apps/admin/code/src/plugins/scaffolds/carManufacturers/views/hooks/graphql.ts#L3) file:
 
 ```ts title="apps/admin/code/src/plugins/scaffolds/carManufacturers/views/hooks/graphql.ts" {8}
 import gql from "graphql-tag";
