fix: add Can I Use section

--- a/docs/tutorials/extend-admin-area/extending-entities.mdx
+++ b/docs/tutorials/extend-admin-area/extending-entities.mdx
@@ -18,6 +18,12 @@ import popularCarManufacturerSaved from "./entities/popular-car-manufacturer-sav
 
 :::
 
+:::info Can I use this?
+
+In order to follow this tutorial, you must use Webiny version **5.9.0** or greater.
+
+:::
+
 ## Overview
 
 Initially, the [`CarManufacturer`](https://github.com/webiny/webiny-examples/blob/master/extend-admin-area/api/code/graphql/src/plugins/scaffolds/carManufacturers/entities/CarManufacturer.ts) entity that was created in the scaffolding process only contains two attributes: [`title`](https://github.com/webiny/webiny-examples/blob/master/extend-admin-area/api/code/graphql/src/plugins/scaffolds/carManufacturers/entities/CarManufacturer.ts#L18) and [`description`](https://github.com/webiny/webiny-examples/blob/master/extend-admin-area/api/code/graphql/src/plugins/scaffolds/carManufacturers/entities/CarManufacturer.ts#L19). Of course, these are just starter attributes and we are certainly encouraged to extend the entity with additional ones.
