--- a/docs/tutorials/extend-admin-area/getting-started.mdx
+++ b/docs/tutorials/extend-admin-area/getting-started.mdx
@@ -16,6 +16,12 @@ import scaffoldsFullOutput from "./scaffolding/scaffold-full-output.png";
 - how to use the **Extend Admin Area** scaffold to get started in no time
 :::
 
+:::info Can I use this?
+
+In order to follow this tutorial, you must use Webiny version **5.9.0** or greater.
+
+:::
+
 ## Extend Admin Area Scaffold
 
 The best way to start extending the Admin Area application would be to use the [Extend Admin Area](/docs/how-to-guides/webiny-cli/scaffolding/extend-admin-area) scaffold, which will automatically generate all of the fundamental application pieces for us. On the application code level, this includes the necessary plugins which will create the following:
