--- a/docs/tutorials/extend-admin-area/introduction.mdx
+++ b/docs/tutorials/extend-admin-area/introduction.mdx
@@ -16,6 +16,12 @@ import scaffoldsAdminArea from "./introduction/scaffolds-admin-area.png";
 - what are the prerequisites that need to be fulfilled in order to follow this tutorial
 :::
 
+:::info Can I use this?
+
+In order to follow this tutorial, you must use Webiny version **5.9.0** or greater.
+
+:::
+
 ## Overview
 
 By default, every Webiny project comes with Webiny Admin Area, a ready-made React application which enables project administrators to manage content coming from one or more Webiny applications, like [Headless CMS](https://www.webiny.com/serverless-app/headless-cms), [Page Builder](https://www.webiny.com/serverless-app/page-builder), [File Manager](https://www.webiny.com/serverless-app/file-manager), and so on. And while these applications do offer a solid number of features and can also be extended to a certain extent, there are still cases where creating custom standalone Admin Area application modules makes more sense.
@@ -32,5 +38,5 @@ The goal of this tutorial is to learn how we can easily extend the existing Admi
 
 ## Prerequisites
 
-Except having an installed Webiny project on top of which we can follow this tutorial, there are no special prerequisites that need to be fulfilled.
+Except having an installed Webiny project (version `5.9.0` or greater) on top of which we can follow this tutorial, there are no special prerequisites that need to be fulfilled.
 
