fix: update changelog and upgrade guide

--- a/docs/changelog/5.10.0.mdx
+++ b/docs/changelog/5.10.0.mdx
@@ -16,6 +16,14 @@ Please check the [Webiny 5.10.0 migration guide](/docs/how-to-guides/upgrade-web
 
 :::
 
+## Infrastructure
+
+### Node 12 Runtime and a New Sharp Layer ([#1738](https://github.com/webiny/webiny-js/pull/1738))
+
+With AWS deprecating Node 10 Lambda runtime, we've also upgraded all of our Lambda functions to use Node 12 (you may have noticed that File Manager Lambdas were using node 10). With that, we also released a new version of Sharp layer, which is twice smaller, and also supports Node 14, so we have the peace of mind for the near future.
+
+The upgrade process will take care of the existing projects and will link your existing Lambdas with the new Sharp layer, and switch to Node 12.
+
 ## Page Builder
 
 ### Website Fixes ([#1746](https://github.com/webiny/webiny-js/pull/1746), [#1752](https://github.com/webiny/webiny-js/pull/1752), [#1755](https://github.com/webiny/webiny-js/pull/1755))
