--- a/docs/how-to-guides/upgrade-webiny/5.9.0-to-5.10.0.mdx
+++ b/docs/how-to-guides/upgrade-webiny/5.9.0-to-5.10.0.mdx
@@ -23,9 +23,10 @@ Make sure to check out the [5.10.0 changelog](/docs/changelog/5.10.0) to get fam
 ## 1. Project Preparation
 
 First, we need to prepare your project for the upgrade process.
-We changed the name of our shared Elasticsearch package from `api-plugin-elastic-search-client` to `api-elasticsearch`, and we have prepared a gist for that.
+We renamed our shared Elasticsearch package from `api-plugin-elastic-search-client` to `api-elasticsearch`, and we need to update package.json files that are using it, before attempting to upgrade packages using `yarn`.
 
 In your project root, run the following:
+
 ```bash
 npx https://gist.github.com/brunozoric/96e66c47abc6769947034fe707138cda
 ```
@@ -70,7 +71,3 @@ As stated in the [Overview](/docs/how-to-guides/upgrade-webiny/overview#pre-prod
 :::tip
 Learn more about different deployment environments in the [CI/CD / Environments](/docs/key-topics/ci-cd/environments) key topic.
 :::
-
-## Additional Steps and Notes
-
-
