feat: add attach policy section

--- a/docs/how-to-guides/deployment/aws/credentials.mdx
+++ b/docs/how-to-guides/deployment/aws/credentials.mdx
@@ -16,7 +16,7 @@ This article guides you through configuring your AWS credentials for programmati
 
 If you prefer the video version, check out our YouTube video below:
 
-<YouTube id="qmtDRmplMG4" />
+<YouTube id="qmtDRmplMG4"/>
 
 ---
 
@@ -84,6 +84,49 @@ Once you navigate off this screen, you will not be able to see the credentials a
 :::
 
 ![aws-user-created](./assets/configure-aws-credentials/aws-user-created.png)
+
+### Attaching a Fine-grained Policy
+
+Alternatively, you can also define a fine-grained policy using our [CloudFormation template](#) that will create a **Group** with all the necessary policies, for a **Webiny** project and assign it to a given user.
+
+:::info
+Please note that a user with programmatic access is a prerequisite for this step.
+If you don't have one please refer to the [previous step](/docs/how-to-guides/deployment/aws/configure-aws-credentials#step-2-create-a-user-for-programmatic-access).
+:::
+
+Now, let's see how to use the CloudFormation template to assign policies to an existing user:
+
+Step 0: Head over to the CloudFormation service in the AWS console and click on _Create stack_ button:
+
+![aws-cloudformation-landing-page](./assets/configure-aws-credentials/cloudformation-home.png)
+
+Step 1: Specify template by pasting the **Amazon S3 URL** for the [template](#) and then click _Next_ button:
+
+![aws-cloudformation-step-1](./assets/configure-aws-credentials/cloudformation-step-1.png)
+
+
+Step 2: Enter a name for the Stack in this example we'll use `Create-Webiny-Project`.
+Then enter the **Username** of the existing CLI user in our case it is `webiny-cli`.
+When ready click _Next_ button:
+
+![aws-cloudformation-step-2](./assets/configure-aws-credentials/cloudformation-step-2.png)
+
+Step 3: We don't need to update any options in this step so let's proceed to the next step by clicking _Next_ button:
+
+![aws-cloudformation-step-3](./assets/configure-aws-credentials/cloudformation-step-3.png)
+
+Step 4: Scroll to the bottom and check the acknowledgment to proceed further and finally click _Create stack_ button:
+
+![aws-cloudformation-step-4](./assets/configure-aws-credentials/cloudformation-step-4.png)
+
+Step 5: The resource creation will take a few minutes. After completion, you will see the completion logs:
+
+![aws-cloudformation-step-5](./assets/configure-aws-credentials/cloudformation-step-5.png)
+
+After completion, you can check out the newly created resources in the IAM service panel.
+Also, if you head over to the previously created user `webiny-cli` in our case, you will see the attached policy and Group:
+
+![aws-cloudformation-step-6](./assets/configure-aws-credentials/cloudformation-step-6.png)
 
 ## Step 3: Configure the Programmatic Access
 
