fix: update as per the feedback

--- a/docs/how-to-guides/deployment/aws/credentials.mdx
+++ b/docs/how-to-guides/deployment/aws/credentials.mdx
@@ -8,6 +8,7 @@ description: Configure AWS credentials.
 
 :::tip What you’ll learn
 - how to configure your AWS credentials for programmatic access
+- how to create a user with fine-grain policies using CloudFormation template
 :::
 
 import YouTube from "@components/Youtube";
@@ -63,8 +64,9 @@ Make sure to select the **Programmatic access** checkbox before moving to the ne
 
 In the next step you define the access level for the new user. Select **Attach existing Policies** from the three options that are available. Then select the **AdministratorAccess** role by marking the checkbox next to it. When ready, click the `Next:Tags` button:
 
-:::info
-Because Webiny creates different resources on your AWS account, it has to have administration-level access to many of the resources. If you feel this is a blocker for your project, get in touch via our [community slack](https://www.webiny.com/slack) and we'll help you out.
+:::caution Want fine-grain permissions?
+In case your organization can't use the `AdministratorAccess` or if you want to have a more strictly defined set of permissions,
+please see the [attaching fine-grain policy](/docs/how-to-guides/deployment/aws/configure-aws-credentials#attaching-a-fine-grain-policy) section.
 :::
 
 ![aws-user-permissions](./assets/configure-aws-credentials/aws-user-permissions.png)
@@ -85,9 +87,9 @@ Once you navigate off this screen, you will not be able to see the credentials a
 
 ![aws-user-created](./assets/configure-aws-credentials/aws-user-created.png)
 
-### Attaching a Fine-grained Policy
+### Attaching a Fine-grain Policy
 
-Alternatively, you can also define a fine-grained policy using our [CloudFormation template](#) that will create a **Group** with all the necessary policies, for a **Webiny** project and assign it to a given user.
+Alternatively, you can also define a fine-grain policy using our [CloudFormation template](#) that will create a **Group** with all the necessary policies, for a **Webiny** project and assign it to a given user.
 
 :::info
 Please note that a user with programmatic access is a prerequisite for this step.
