feat: update aws credentials guide with create stack gif

--- a/docs/how-to-guides/deployment/aws/credentials.mdx
+++ b/docs/how-to-guides/deployment/aws/credentials.mdx
@@ -89,43 +89,25 @@ Once you navigate off this screen, you will not be able to see the credentials a
 
 ### Attaching a Fine-grain Policy
 
-Alternatively, you can also define a fine-grain policy using our [CloudFormation template](#) that will create a **Group** with all the necessary policies, for a **Webiny** project and assign it to a given user.
+Alternatively, you can also define a fine-grain policy using our [CloudFormation template](https://github.com/webiny/webiny-js/blob/next/docs/CWP_POLICY_CLOUDFORMATION_TEMPLATE.json)
+that will create a **Group** with all the necessary policies, for a **Webiny** project and assign it to a given user.
 
 :::info
 Please note that a user with programmatic access is a prerequisite for this step.
 If you don't have one please refer to the [previous step](/docs/how-to-guides/deployment/aws/configure-aws-credentials#step-2-create-a-user-for-programmatic-access).
 :::
 
-Now, let's see how to use the CloudFormation template to assign policies to an existing user:
+Quickly [create stack](https://console.aws.amazon.com/cloudformation/home?#/stacks/create/review?templateURL=https://cf-templates-16wmwt5xsvalh-ap-southeast-1.s3.ap-southeast-1.amazonaws.com/CWP_POLICY_CLOUDFORMATION_TEMPLATE.json&stackName=Create-webiny-project)
+using our CloudFormation template.
+You will be prompted to enter the username, and it will create and attach the required policies to it, as shown below:
 
-Step 0: Head over to the CloudFormation service in the AWS console and click on _Create stack_ button:
+![aws-cloudformation-create-stack](./assets/configure-aws-credentials/create-stack.gif)
 
-![aws-cloudformation-landing-page](./assets/configure-aws-credentials/cloudformation-home.png)
-
-Step 1: Specify template by pasting the **Amazon S3 URL** for the [template](#) and then click _Next_ button:
-
-![aws-cloudformation-step-1](./assets/configure-aws-credentials/cloudformation-step-1.png)
-
-
-Step 2: Enter a name for the Stack in this example we'll use `Create-Webiny-Project`.
-Then enter the **Username** of the existing CLI user in our case it is `webiny-cli`.
-When ready click _Next_ button:
-
-![aws-cloudformation-step-2](./assets/configure-aws-credentials/cloudformation-step-2.png)
-
-Step 3: We don't need to update any options in this step so let's proceed to the next step by clicking _Next_ button:
-
-![aws-cloudformation-step-3](./assets/configure-aws-credentials/cloudformation-step-3.png)
-
-Step 4: Scroll to the bottom and check the acknowledgment to proceed further and finally click _Create stack_ button:
-
-![aws-cloudformation-step-4](./assets/configure-aws-credentials/cloudformation-step-4.png)
-
-Step 5: The resource creation will take a few minutes. After completion, you will see the completion logs:
+The resource creation will take a few minutes. After completion, you will see the completion logs:
 
 ![aws-cloudformation-step-5](./assets/configure-aws-credentials/cloudformation-step-5.png)
 
-After completion, you can check out the newly created resources in the IAM service panel.
+Afterwards, you can check out the newly created resources in the IAM service panel.
 Also, if you head over to the previously created user `webiny-cli` in our case, you will see the attached policy and Group:
 
 ![aws-cloudformation-step-6](./assets/configure-aws-credentials/cloudformation-step-6.png)
