fix: add Can I Use section

--- a/docs/tutorials/extend-admin-area/security/graphql-api.mdx
+++ b/docs/tutorials/extend-admin-area/security/graphql-api.mdx
@@ -19,6 +19,12 @@ import createTestUser from "./assets/create-test-user.png";
 
 :::
 
+:::info Can I use this?
+
+In order to follow this tutorial, you must use Webiny version **5.9.0** or greater.
+
+:::
+
 :::info
 
 Learn more about the Webiny Security Framework in the [Security Framework](/docs/key-topics/security-framework/introduction) key topics section.
