--- a/docs/tutorials/extend-admin-area/security/admin-area.mdx
+++ b/docs/tutorials/extend-admin-area/security/admin-area.mdx
@@ -29,6 +29,12 @@ import deleteButtonInDataList from "./assets/delete-button-in-datalist.png";
 - how to prevent unauthorized users from seeing user-interface sections in Webiny Admin Area
 :::
 
+:::info Can I use this?
+
+In order to follow this tutorial, you must use Webiny version **5.9.0** or greater.
+
+:::
+
 :::info
 Learn more about the Webiny Security Framework in the [Security Framework](/docs/key-topics/security-framework/introduction) key topics section.
 :::
