--- a/docs/tutorials/extend-admin-area/security/introduction.mdx
+++ b/docs/tutorials/extend-admin-area/security/introduction.mdx
@@ -19,6 +19,12 @@ import securityGroupsModule from "./assets/security-groups-module.png";
 - how to add custom permissions UI to permissions editor in Admin Area
 :::
 
+:::info Can I use this?
+
+In order to follow this tutorial, you must use Webiny version **5.9.0** or greater.
+
+:::
+
 :::info
 Learn more about the Webiny Security Framework in the [Security Framework](/docs/key-topics/security-framework/introduction) key topics section.
 :::
