fix: replace "Webiny Admin Area" with "Admin Area application"

--- a/docs/tutorials/extend-admin-area/security/admin-area.mdx
+++ b/docs/tutorials/extend-admin-area/security/admin-area.mdx
@@ -3,7 +3,7 @@ id: admin-area
 title: Admin Area
 sidebar_label: Admin Area
 keywords: ["application", "security", admin", "area"]
-description: Learn how you can secure your Webiny Admin Area modules.
+description: Learn how you can secure your Admin Area application modules.
 ---
 
 import CenteredImage from "@components/CenteredImage";
@@ -26,7 +26,7 @@ import deleteButtonInDataList from "./assets/delete-button-in-datalist.png";
 
 :::tip What you'll learn
 
-- how to prevent unauthorized users from seeing user-interface sections in Webiny Admin Area
+- how to prevent unauthorized users from seeing user-interface sections in Webiny Admin application
 :::
 
 :::info Can I use this?
@@ -52,7 +52,7 @@ For starters, let's see how we can hide the Car Manufacturers menu items in the 
 
 ## Main Menu Items
 
-By completing the [previous set of tutorials](/docs/tutorials/extend-admin-area/introduction), in our Webiny Admin Area, we should have the following items in the main menu:
+By completing the [previous set of tutorials](/docs/tutorials/extend-admin-area/introduction), in our Admin Area application, we should have the following items in the main menu:
 
 <CenteredImage alt="Main Menu - Car Manufacturers Module" src={carManufacturersMenuItem} />
 
@@ -332,13 +332,13 @@ Note that, instead of the `SecureView` React component, we could've also easily 
 
 ## Final Notes
 
-We've covered all of the possible ways you can perform authorization checks, while developing new Webiny Admin Area modules:
+We've covered all of the possible ways you can perform authorization checks, while developing new Admin Area application modules:
 
 - `useSecurity` React hook
 - `SecureRoute` React component
 - `SecureView` React component
 
-It's useful to know that that these utilities can be used outside of the Webiny Admin Area as well, like for example in a custom React application.
+It's useful to know that that these utilities can be used outside of the Admin Area application as well, like for example in a custom React application.
 
 :::info
 To learn more about how to use these in a custom React application, please check out the dedicated article (coming soon).
