--- a/docs/tutorials/extend-admin-area/security/introduction.mdx
+++ b/docs/tutorials/extend-admin-area/security/introduction.mdx
@@ -36,7 +36,7 @@ In the previous two sections, we've seen how we can quickly extend our GraphQL A
 In this tutorial, we continue working on our module by adding a layer of security around it. With it, we want to achieve the following:
 
 1. prevent users from executing GraphQL API queries and mutations, if they don't have the necessary security permissions
-2. prevent users from accessing modules we've added into the Webiny Admin Area application, if the user doesn't have the necessary security permissions
+2. prevent users from accessing modules we've added into the Admin Area application, if the user doesn't have the necessary security permissions
 
 Note that in order to implement both behaviours, we are relying on **security permissions**, which is the first step of implementing a security layer for our application, and is the first topic we cover in this introduction section.
 
