fix: replace "logged in" with "logged-in"

--- a/docs/tutorials/extend-admin-area/security/admin-area.mdx
+++ b/docs/tutorials/extend-admin-area/security/admin-area.mdx
@@ -87,7 +87,7 @@ export default new MenuPlugin({
     render({ Menu, Item }) {
         const { identity } = useSecurity();
 
-        // We get the "car-manufacturers" permission from current identity (logged in user).
+        // We get the "car-manufacturers" permission from current identity (logged-in user).
         const permission = identity.getPermission<
             CarManufacturersPermission | FullAccessPermission
             >("car-manufacturers");
@@ -178,7 +178,7 @@ export default (): RoutePlugin => ({
       path={"/car-manufacturers"}
       exact
       render={() => (
-        // In order to be able to access this route, the logged in user needs to
+        // In order to be able to access this route, the logged-in user needs to
         // have the "car-manufacturers" permission. We don't inspect the extra
         // properties it may hold, we do that within rendered child components.
         <SecureRoute permission={"car-manufacturers"}>
@@ -209,7 +209,7 @@ And that's how you secure your routes. Note that we've only checking if the logg
 
 ## React Components
 
-Let's see how we can prevent rendering of React components, in case the logged in administrator is not authorized to see them.
+Let's see how we can prevent rendering of React components, in case the logged-in administrator is not authorized to see them.
 
 For example, let's hide the New Car Manufacturer button, for administrators that aren't allowed to create new or update existing car manufacturers. As we'll soon be able to see, this is determined via the `rwd` property in our `car-manufacturers` security permission object (letter `w` must be present in the string).
 
@@ -319,7 +319,7 @@ export default CarManufacturersDataList;
 In order to conditionally render the New Car Manufacturer button, we are using the [`SecureView`](https://github.com/webiny/webiny-js/blob/v5.10.0/packages/app-security/src/components/SecureView.tsx) React component, imported from the [`@webiny/app-security`](https://github.com/webiny/webiny-js/blob/v5.10.0/packages/app-security) package.
 :::
 
-Once again, with this newly added code in place, we should no longer see the New Car Manufacturer button if the logged in user isn't allowed to create new or update existing car manufacturers (letter `w` must be present in the `rwd` property of our `car-manufacturers` security permission object).
+Once again, with this newly added code in place, we should no longer see the New Car Manufacturer button if the logged-in user isn't allowed to create new or update existing car manufacturers (letter `w` must be present in the `rwd` property of our `car-manufacturers` security permission object).
 
 <CenteredImage
   alt='Hiding the "New Car Manufacturer Button" (Hidden)'
