--- a/docs/tutorials/extend-admin-area/security/graphql-api.mdx
+++ b/docs/tutorials/extend-admin-area/security/graphql-api.mdx
@@ -189,7 +189,7 @@ To manually test that, we can simply create a new user via the Webiny Security a
 
 <CenteredImage alt="Create a Test User" src={createTestUser} />
 
-Once we've created the user, we can log in into the Admin Area application with it (using its username and password), and execute the same GraphQL query, this time using the built-in API Playground. We will use this client simply because of the fact that, upon issuing GraphQL operations, it will automatically attach the correct `Authorization` request header for us. In other words, it will perform GraphQL operations as the currently logged in user.
+Once we've created the user, we can log in into the Admin Area application with it (using its username and password), and execute the same GraphQL query, this time using the built-in API Playground. We will use this client simply because of the fact that, upon issuing GraphQL operations, it will automatically attach the correct `Authorization` request header for us. In other words, it will perform GraphQL operations as the currently logged-in user.
 
 :::info
 Learn more about the API Playground GraphQL client in the [API Playground](/docs/how-to-guides/webiny-applications/admin-area/api-playground) guide.
@@ -199,7 +199,7 @@ So, as we can see in the following screenshot, the GraphQL query was successful,
 
 <CenteredImage alt="GraphQL Authorization Success" src={graphqlAuthSuccess} />
 
-This means that the user we're currently logged in with has the appropriate security permissions, and that the newly added authorization code works as expected.
+This means that the user we're currently logged-in with has the appropriate security permissions, and that the newly added authorization code works as expected.
 
 ## Final Notes
 
