fix: replace "administrator" with "user"

--- a/docs/tutorials/extend-admin-area/security/admin-area.mdx
+++ b/docs/tutorials/extend-admin-area/security/admin-area.mdx
@@ -46,9 +46,9 @@ Learn more about the Webiny Security Framework in the [Security Framework](/docs
 The code that we will cover in this tutorial can also be found in our [GitHub examples repository](https://github.com/webiny/webiny-examples/tree/master/extend-admin-area-security/apps/admin/code/src/plugins/scaffolds/carManufacturers).
 :::
 
-Let's wrap up this tutorial by adding authorization checks in the Admin Area application. What we want to achieve is having a piece of UI hide if the currently logged-in administrator doesn't have access to it (doesn't have the necessary security permissions).
+Let's wrap up this tutorial by adding authorization checks in the Admin Area application. What we want to achieve is having a piece of UI hide if the currently logged-in user doesn't have access to it (doesn't have the necessary security permissions).
 
-For starters, let's see how we can hide the Car Manufacturers menu items in the main menu, in cases where the logged-in administrator doesn't possess the necessary permissions.
+For starters, let's see how we can hide the Car Manufacturers menu items in the main menu, in cases where the logged-in user doesn't possess the necessary permissions.
 
 ## Main Menu Items
 
@@ -140,7 +140,7 @@ yarn webiny watch apps/admin --env dev
 To learn more, check out the [Use the Watch Command](/docs/how-to-guides/webiny-cli/use-watch-command) guide.
 :::
 
-As you may have noticed, we're using the exact same logic and code, that we previously used while trying to secure the [`getCarManufacturer`](/docs/tutorials/extend-admin-area/security/graphql-api#securing-graphql-api-resolvers) GraphQL resolver function. The only aspect that's different is the way we fetch the currently logged-in administrator's permission. Here, we are using the `useSecurity` React hook in order to first get the administrator, and then, via the `getPermission` method, the `car-manufacturers` permission.
+As you may have noticed, we're using the exact same logic and code, that we previously used while trying to secure the [`getCarManufacturer`](/docs/tutorials/extend-admin-area/security/graphql-api#securing-graphql-api-resolvers) GraphQL resolver function. The only aspect that's different is the way we fetch the currently logged-in user's permission. Here, we are using the `useSecurity` React hook in order to first get the logged-in user, and then, via the `getPermission` method, the `car-manufacturers` permission.
 
 In order to manually test this, we can just log in with a user that doesn't belong to the Car Manufacturers security group. In that case, if everything was done correctly, we should not be able to see the Car Manufacturers menu item:
 
@@ -205,13 +205,13 @@ So, with this newly added code in place, by entering the mentioned `/car-manufac
 
 <CenteredImage alt="Cannot Access Route - Not Authorized Message" src={routeNotAuthorized} />
 
-And that's how you secure your routes. Note that we've only checking if the logged-in administrator possesses the `car-manufacturers` permission. And although that's not a very specific check, we can still consider is it as enough, since we can perform more specific checks within the rendered child React components.
+And that's how you secure your routes. Note that we've only checking if the logged-in user possesses the `car-manufacturers` permission. And although that's not a very specific check, we can still consider is it as enough, since we can perform more specific checks within the rendered child React components.
 
 ## React Components
 
-Let's see how we can prevent rendering of React components, in case the logged-in administrator is not authorized to see them.
+Let's see how we can prevent rendering of React components, in case the logged-in user is not authorized to see them.
 
-For example, let's hide the New Car Manufacturer button, for administrators that aren't allowed to create new or update existing car manufacturers. As we'll soon be able to see, this is determined via the `rwd` property in our `car-manufacturers` security permission object (letter `w` must be present in the string).
+For example, let's hide the New Car Manufacturer button, for logged-in users that aren't allowed to create new or update existing car manufacturers. As we'll soon be able to see, this is determined via the `rwd` property in our `car-manufacturers` security permission object (letter `w` must be present in the string).
 
 <CenteredImage alt='Hiding the "New Car Manufacturer Button"' src={hidingNewButton} />
 
