--- a/docs/tutorials/extend-admin-area/extending-entities.mdx
+++ b/docs/tutorials/extend-admin-area/extending-entities.mdx
@@ -28,7 +28,7 @@ In order to follow this tutorial, you must use Webiny version **5.9.0** or great
 
 Initially, the [`CarManufacturer`](https://github.com/webiny/webiny-examples/blob/master/extend-admin-area/api/code/graphql/src/plugins/scaffolds/carManufacturers/entities/CarManufacturer.ts) entity that was created in the scaffolding process only contains two attributes: [`title`](https://github.com/webiny/webiny-examples/blob/master/extend-admin-area/api/code/graphql/src/plugins/scaffolds/carManufacturers/entities/CarManufacturer.ts#L18) and [`description`](https://github.com/webiny/webiny-examples/blob/master/extend-admin-area/api/code/graphql/src/plugins/scaffolds/carManufacturers/entities/CarManufacturer.ts#L19). Of course, these are just starter attributes and we are certainly encouraged to extend the entity with additional ones.
 
-Let's see how we can add the new `isPopular` boolean attribute to the [`CarManufacturer`](https://github.com/webiny/webiny-examples/blob/master/extend-admin-area/api/code/graphql/src/plugins/scaffolds/carManufacturers/entities/CarManufacturer.ts) entity, and then, via the new Admin Area application module, enable logged-in administrators to modify its value, by adding a simple [`Switch`](https://storybook.webiny.com/?path=/story/components-switch--usage) form field to the Car Manufacturers form.
+Let's see how we can add the new `isPopular` boolean attribute to the [`CarManufacturer`](https://github.com/webiny/webiny-examples/blob/master/extend-admin-area/api/code/graphql/src/plugins/scaffolds/carManufacturers/entities/CarManufacturer.ts) entity, and then, via the new Admin Area application module, enable logged-in users to modify its value, by adding a simple [`Switch`](https://storybook.webiny.com/?path=/story/components-switch--usage) form field to the Car Manufacturers form.
 
 ## GraphQL API
 
@@ -116,7 +116,7 @@ Once we've done all of the above shown changes, we can switch to our Admin Area 
 
 ## Admin Area Application
 
-In the [`CarManufacturersForm`](https://github.com/webiny/webiny-examples/blob/master/extend-admin-area/apps/admin/code/src/plugins/scaffolds/carManufacturers/views/CarManufacturersForm.tsx) React component, let's add a new [`Switch`](https://storybook.webiny.com/?path=/story/components-switch--usage) form element, which will enable logged-in administrators to mark a particular car manufacturer as popular or not popular (parts of code removed for brevity):
+In the [`CarManufacturersForm`](https://github.com/webiny/webiny-examples/blob/master/extend-admin-area/apps/admin/code/src/plugins/scaffolds/carManufacturers/views/CarManufacturersForm.tsx) React component, let's add a new [`Switch`](https://storybook.webiny.com/?path=/story/components-switch--usage) form element, which will enable logged-in users to mark a particular car manufacturer as popular or not popular (parts of code removed for brevity):
 
 ```tsx title="apps/admin/code/src/plugins/scaffolds/carManufacturers/views/CarManufacturersForm.tsx" {4,18-27}
 (...)
