--- a/docs/tutorials/extend-admin-area/security/introduction.mdx
+++ b/docs/tutorials/extend-admin-area/security/introduction.mdx
@@ -78,7 +78,7 @@ A simple security permission object might look something like the following:
 
 Within Admin Area application's security model, security permissions are assigned to identities via security groups.
 
-Every identity (for example, a logged-in administrator) belongs to **exactly one** security group. But, note that a single security group can have multiple security permissions objects assigned to it, allowing or preventing access across multiple Webiny and your custom applications.
+Every identity (for example, a logged-in user) belongs to **exactly one** security group. But, note that a single security group can have multiple security permissions objects assigned to it, allowing or preventing access across multiple Webiny and your custom applications.
 
 This can be seen while creating a new security group via the security groups module.
 
@@ -94,9 +94,9 @@ Ultimately, no matter if we're performing authorization on the API side or in th
 
 ## Creating Custom Security Permissions
 
-By adding a new permissions section in the security group form that we've seen above, we can allow logged-in administrators to manually toggle access for our own custom features, for all identities that are linked with the particular security group.
+By adding a new permissions section in the security group form that we've seen above, we can allow logged-in users to manually toggle access for our own custom features, for all identities that are linked with the particular security group.
 
-Continuing with the car manufacturers example that we've used in previous tutorials, we could add a new Car Manufacturers section, and offer a couple of different options to the logged-in administrator:
+Continuing with the car manufacturers example that we've used in previous tutorials, we could add a new Car Manufacturers section, and offer a couple of different options to the logged-in user:
 
 <CenteredImage alt="Added Security Permissions Group" src={addedSecurityPermissionsGroup} />
 
@@ -222,7 +222,7 @@ import permissions from "./permissions";
 export default [menus, routes, permissions];
 ```
 
-By completing this step, we've added the new Car Manufacturers permissions section in the security group form. Logged-in administrators can now create new (or extend existing) security groups, and give access to our new Car Manufacturers module. For example, one security group can allow only reading car manufacturers data, while the other one may allow all three primary actions - read, write, and delete, and even allow access to the imaginary special feature.
+By completing this step, we've added the new Car Manufacturers permissions section in the security group form. logged-in users can now create new (or extend existing) security groups, and give access to our new Car Manufacturers module. For example, one security group can allow only reading car manufacturers data, while the other one may allow all three primary actions - read, write, and delete, and even allow access to the imaginary special feature.
 
 Now that we have this new security permissions section, let's create the new Car Manufacturers security group, that enables full access to our new Car Manufacturers module. We'll need this security group in order to perform some manual testing down the road.
 
