--- a/docs/how-to-guides/deployment/aws/credentials.mdx
+++ b/docs/how-to-guides/deployment/aws/credentials.mdx
@@ -55,14 +55,14 @@ Click on **Add user** to create the account with the IAM credentials:
 
 ![aws-create-user](./assets/configure-aws-credentials/aws-create-user.png)
 
-Here you enter a 5-step process, and the first step is to create a `User name` for the credentials.
+Here you enter a 5-step process, and the first step is to create a **User name** for the credentials.
 :::caution Programmatic access
 Make sure to select the **Programmatic access** checkbox before moving to the next step.
 :::
 
 ![aws-user-details](./assets/configure-aws-credentials/aws-user-details.png)
 
-In the next step you define the access level for the new user. Select **Attach existing Policies** from the three options that are available. Then select the **AdministratorAccess** role by marking the checkbox next to it. When ready, click the `Next:Tags` button:
+In the next step you define the access level for the new user. Select **Attach existing Policies** from the three options that are available. Then select the **AdministratorAccess** policy by marking the checkbox next to it. When ready, click the **Next:Tags** button:
 
 :::caution Want fine-grain permissions?
 In case your organization can't use the `AdministratorAccess` or if you want to have a more strictly defined set of permissions,
@@ -71,11 +71,11 @@ please see the [attaching fine-grain policy](/docs/how-to-guides/deployment/aws/
 
 ![aws-user-permissions](./assets/configure-aws-credentials/aws-user-permissions.png)
 
-In case you don't want to add any tags to your new user, you can just skip this step and click the `Next:Review` button.
+In case you don't want to add any tags to your new user, you can just skip this step and click the **Next:Review** button.
 
 ![aws-user-tags](./assets/configure-aws-credentials/aws-user-tags.png)
 
-After all the steps are complete, you'll see a `Review` page. It should look something similar to this. If everything is correct, click the `Create user` button.
+After all the steps are complete, you'll see a **Review** page. It should look something similar to this. If everything is correct, click the **Create user** button.
 
 ![aws-user-review](./assets/configure-aws-credentials/aws-user-review.png)
 
@@ -89,17 +89,14 @@ Once you navigate off this screen, you will not be able to see the credentials a
 
 ### Attaching a Fine-grain Policy
 
-Alternatively, you can also define a fine-grain policy using our [CloudFormation template](https://github.com/webiny/webiny-js/blob/next/docs/CWP_POLICY_CLOUDFORMATION_TEMPLATE.json)
-that will create a **Group** with all the necessary policies, for a **Webiny** project and assign it to a given user.
-
 :::info
 Please note that a user with programmatic access is a prerequisite for this step.
 If you don't have one please refer to the [previous step](/docs/how-to-guides/deployment/aws/configure-aws-credentials#step-2-create-a-user-for-programmatic-access).
 :::
 
-Quickly [create stack](https://console.aws.amazon.com/cloudformation/home?#/stacks/create/review?templateURL=https://cf-templates-16wmwt5xsvalh-ap-southeast-1.s3.ap-southeast-1.amazonaws.com/CWP_POLICY_CLOUDFORMATION_TEMPLATE.json&stackName=Create-webiny-project)
-using our CloudFormation template.
-You will be prompted to enter the username, and it will create and attach the required policies to it, as shown below:
+Alternatively, you can also define a fine-grain policy using our [CloudFormation template](https://github.com/webiny/webiny-js/blob/next/docs/CWP_POLICY_CLOUDFORMATION_TEMPLATE.json)
+that will create a [user group](https://docs.aws.amazon.com/IAM/latest/UserGuide/id_groups.html) with all the necessary policies, for your Webiny project and assign a given user to it.
+You can do this by clicking [create stack](https://console.aws.amazon.com/cloudformation/home?#/stacks/create/review?templateURL=https://cf-templates-16wmwt5xsvalh-ap-southeast-1.s3.ap-southeast-1.amazonaws.com/CWP_POLICY_CLOUDFORMATION_TEMPLATE.json&stackName=Create-webiny-project):
 
 ![aws-cloudformation-create-stack](./assets/configure-aws-credentials/create-stack.gif)
 
@@ -107,8 +104,8 @@ The resource creation will take a few minutes. After completion, you will see th
 
 ![aws-cloudformation-step-5](./assets/configure-aws-credentials/cloudformation-step-5.png)
 
-Afterwards, you can check out the newly created resources in the IAM service panel.
-Also, if you head over to the previously created user `webiny-cli` in our case, you will see the attached policy and Group:
+Afterwards, you can check out the newly created resources in the [IAM service panel](https://console.aws.amazon.com/iamv2/home?#/users).
+Also, if you head over to the previously created user (`webiny-cli` in our case), you will see the attached policy and group:
 
 ![aws-cloudformation-step-6](./assets/configure-aws-credentials/cloudformation-step-6.png)
 
