--- a/docs/changelog/5.11.0.mdx
+++ b/docs/changelog/5.11.0.mdx
@@ -16,23 +16,38 @@ Please check the [Webiny 5.11.0 migration guide](/docs/how-to-guides/upgrade-web
 
 :::
 
-## Headless CMS
-
-### Define Content Models via Plugins (PREVIEW) ([#1797](https://github.com/webiny/webiny-js/pull/1797))
-
-✍️
-
-### Extend Headless CMS GraphQL API ([#1788](https://github.com/webiny/webiny-js/pull/1788))
-
-✍️
-
 ## Development
 
 ### Pulumi v3 Upgrade ([#1787](https://github.com/webiny/webiny-js/pull/1787))
 
-✍️
+From now on, all Webiny project will use [Pulumi](/docs/key-topics/deployment/iac-with-pulumi) v3.
+
+For Webiny users, this will make it possible to have access to all of the new features and fixes that the framework will receive in the future.
+
+In terms of existing projects and upgrading, there shouldn't be any major changes or extra steps that you'll need to perform. But, there are a couple of things to have in mind. Be sure to check the [upgrade guide](/docs/how-to-guides/upgrade-webiny/5.10.0-to-5.11.0) for more information.
 
 ### Improved CI/CD Scaffolds ([#1786](https://github.com/webiny/webiny-js/pull/1786))
 
-✍️
+A couple of useful updates were made to the existing CI/CD scaffold.
 
+:::tip
+
+Learn more about CI/CD and how to set it up for your Webiny project in our [CI/CD key topics](/docs/key-topics/ci-cd/introduction).
+
+:::
+
+#### Updates to the pull-requests workflows
+
+The pull-request workflow that gets created during the scaffolding process will now make sure that all of the changes are deployed into a short-lived environment. This will happen on every new PR and every time a new change is πThis makes it possible for the team to check out all of the changes on their own, before the PR is merged. And, once the PR is either merged or simply closed, all of the cloud infrastructure resources will be destroyed.
+
+<!-- These are for 5.12.0 -->
+
+<!-- ## Headless CMS -->
+
+<!-- ### Define Content Models via Plugins ([#1797](https://github.com/webiny/webiny-js/pull/1797)) -->
+
+<!-- ✍️ -->
+
+<!-- ### Extend Headless CMS GraphQL API ([#1788](https://github.com/webiny/webiny-js/pull/1788)) -->
+
+<!-- ✍️ -->
